compiler/testData/diagnostics/tests/DeferredTypes.fir.kt
// NI_EXPECTED_FILE

interface T {
  val a = <!PROPERTY_INITIALIZER_IN_INTERFACE!><!UNRESOLVED_REFERENCE!>Foo<!>.bar()<!>
}
